@@ -1,7 +1,17 @@
-## Interface: 100205
+## Interface: 30403
 ## Title: BugGrabber
 ## Version: v10.2.2
 ## Notes: Grabs bugs for the bug sack.
+## Notes-deDE: Grabs bugs for the bug sack.
+## Notes-ruRU: Grabs bugs for the bug sack.
+## Notes-zhCN: Grabs bugs for the bug sack.
+## Notes-zhTW: Grabs bugs for the bug sack.
+## Notes-koKR: Grabs bugs for the bug sack.
+## Notes-frFR: Grabs bugs for the bug sack.
+## Notes-esES: Grabs bugs for the bug sack.
+## Notes-esMX: Grabs bugs for the bug sack.
+## Notes-itIT: Grabs bugs for the bug sack.
+## Notes-ptBR: Grabs bugs for the bug sack.
 ## Author: Funkydude
 ## X-Credits: Rabbit, Rowne, Ramble, kergoth, ckknight, Fritti
 ## X-License: All Rights Reserved
